--- a/index.html
+++ b/index.html
@@ -15,35 +15,37 @@
         </div>
         <div class="flex-shrink-0 w-full bg-red-50 rounded-xl shadow-lg shadow-slate-500 md:mt-0 sm:max-w-md xl:p-0 ">
             <div class="p-5 pt-20 space-y-10">
-                <form class="space-y-6" action="#">
+                <form class="space-y-6" action>
                     <div class="flex -mx-3">
                         <div class="w-full px-3 mb-5">
-                            <label for="" class="text-sm font-bold px-1">Email</label>
+                            <label for="email" class="block">
+                                <span class="text-sm font-bold px-1 block after:content-['*'] after:text-pink-500 after:ml-0.5">Email</span>
+                            </label>
                             <div class="flex">
                                 <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="fa-solid fa-user text-lg"></i></div>
-                                <input type="email" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 text-black bg-red-100 border-red-400 outline-none focus:border-red-700 placeholder-slate-700" placeholder="">
+                                <input type="email" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 text-black bg-red-100 border-red-400 outline-none focus:border-red-700" placeholder="" required>
                             </div>
                         </div>
                     </div>
                     <div class="flex -mx-3">
                         <div class="w-full px-3 mb-5">
-                            <label for="" class="text-sm font-bold px-1">Password</label>
+                            <label for="password" class="text-sm font-bold px-1">Password</label>
                             <div class="flex">
                                 <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="fa-solid fa-lock text-lg"></i></div>
-                                <input type="password" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 text-black bg-red-100 border-red-400 outline-none focus:border-red-700" placeholder="">
+                                <input type="password" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 text-black bg-red-100 border-red-400 outline-none focus:border-red-700" placeholder="" required>
                             </div>
                         </div>
                     </div>
                     <div class="flex items-center justify-between">
                         <div class="flex items-start">
                             <div class="flex items-center h-5">
-                              <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 :ring-primary-600" required="">
+                              <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 :ring-primary-600">
                             </div>
                             <div class="ml-3 text-sm">
                               <label for="remember" class="text-black">Remember me</label>
                             </div>
                         </div>
-                        <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
+                        <a href="#" class="text-sm font-medium text-primary-600 hover:underline">Forgot password?</a>
                     </div>
                     <button type="submit" class="w-full text-black font-bold bg-red-400 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 rounded-lg text-sm px-5 py-2.5 text-center">Log In</button>
                 </form>
